tests/unary/unary.exp
Error -------------------------------------------------------------------------------------------------- delete.js:11:12

Cannot delete `foo.a` because undefined [1] is incompatible with number [1].

   delete.js:11:12
   11|     delete foo.a; // error
                  ^^^^^

References:
   delete.js:10:23
   10|   function (foo: { a: number }) {
                             ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:14:12

Cannot delete `foo['a']` because undefined [1] is incompatible with number [1].

   delete.js:14:12
   14|     delete foo['a']; // error
                  ^^^^^^^^

References:
   delete.js:13:23
   13|   function (foo: { a: number }) {
                             ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:18:12

Cannot delete `foo.a` because property `a` is not writable.

   18|     delete foo.a; // error
                  ^^^^^


Error -------------------------------------------------------------------------------------------------- delete.js:21:12

Cannot delete `foo['a']` because property `a` is not writable.

   21|     delete foo['a']; // error
                  ^^^^^^^^


Error -------------------------------------------------------------------------------------------------- delete.js:31:12

Cannot delete `foo.a` because undefined [1] is incompatible with number [1].

   delete.js:31:12
   31|     delete foo.a; // error
                  ^^^^^

References:
   delete.js:30:24
   30|   function (foo: { -a: number }) {
                              ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:34:12

Cannot delete `foo['a']` because undefined [1] is incompatible with number [1].

   delete.js:34:12
   34|     delete foo['a']; // error
                  ^^^^^^^^

References:
   delete.js:33:24
   33|   function (foo: { -a: number }) {
                              ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:41:12

Cannot delete `foo[0]` because undefined [1] is incompatible with number [2].

   delete.js:41:12
   41|     delete foo[0] // error
                  ^^^^^^

References:
   delete.js:41:5
   41|     delete foo[0] // error
           ^^^^^^^^^^^^^ [1]
   delete.js:40:18
   40|   function (foo: number[]) {
                        ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- delete.js:44:12

Cannot delete `foo[1]` because tuple type [1] only has 1 element, so index 1 is out of bounds.

   delete.js:44:12
   44|     delete foo[1] // error
                  ^^^^^^

References:
   delete.js:43:18
   43|   function (foo: [number]) {
                        ^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:47:12

Cannot delete `foo[0]` because:
 - undefined [1] is incompatible with number [2].
 - read-only arrays cannot be written to.

   delete.js:47:12
   47|     delete foo[0] // error
                  ^^^^^^

References:
   delete.js:47:5
   47|     delete foo[0] // error
           ^^^^^^^^^^^^^ [1]
   delete.js:46:33
   46|   function (foo: $ReadOnlyArray<number>) {
                                       ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- delete.js:51:12

Cannot perform delete operation because `foo?.a` [1] is unsupported reference.

   51|     delete foo?.a // TODO
                  ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:54:12

Cannot perform delete operation because `foo?.a` [1] is unsupported reference.

   54|     delete foo?.a // TODO
                  ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:57:12

Cannot get `foo?.a` because property `a` is not readable.

   57|     delete foo?.a // TODO
                  ^^^^^^


Error -------------------------------------------------------------------------------------------------- delete.js:57:12

Cannot perform delete operation because `foo?.a` [1] is unsupported reference.

   57|     delete foo?.a // TODO
                  ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:67:12

Cannot delete `foo['bar']` because undefined [1] is incompatible with number [1].

   delete.js:67:12
   67|     delete foo['bar'] // error
                  ^^^^^^^^^^

References:
   delete.js:66:35
   66|   function (foo: { [key: string]: number }) {
                                         ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:70:12

Cannot delete `foo['bar']` because property `bar` is not writable.

   70|     delete foo['bar'] // error
                  ^^^^^^^^^^


Error -------------------------------------------------------------------------------------------------- delete.js:73:12

Cannot delete `foo['bar']` because undefined [1] is incompatible with number [1].

   delete.js:73:12
   73|     delete foo['bar'] // error
                  ^^^^^^^^^^

References:
   delete.js:72:36
   72|   function (foo: { -[key: string]: number }) {
                                          ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:83:12

Cannot delete `foo[0]` because undefined [1] is incompatible with number [1].

   delete.js:83:12
   83|     delete foo[0] // error
                  ^^^^^^

References:
   delete.js:82:35
   82|   function (foo: { [key: number]: number }) {
                                         ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:86:12

Cannot delete `foo[1]` because an index signature declaring the expected key / value type is not writable.

   86|     delete foo[1] // error
                  ^^^^^^


Error -------------------------------------------------------------------------------------------------- delete.js:89:12

Cannot delete `foo[1]` because undefined [1] is incompatible with number [1].

   delete.js:89:12
   89|     delete foo[1] // error
                  ^^^^^^

References:
   delete.js:88:35
   88|   function (foo: {-[key: number]: number}) {
                                         ^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:93:12

Cannot perform delete operation because `a` [1] is unsupported reference.

   93|     delete a;
                  ^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:96:12

Cannot perform delete operation because object literal [1] is not a property reference.

   96|     delete { a: 1 } // error
                  ^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- delete.js:99:12

Cannot perform delete operation because array literal [1] is not a property reference.

   99|     delete [1, 2, 3] // error
                  ^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- delete.js:104:16

Cannot perform delete operation because `super.name` [1] is unsupported reference.

   104|         delete super.name;
                       ^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- unary.js:8:10

string [1] is not a number.

   unary.js:8:10
   8|   return -y; // error, we don't allow coercion here
               ^^

References:
   unary.js:7:16
   7| function x1(y: string): number {
                     ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- unary.js:12:11

string [1] is incompatible with number [2].

   unary.js:12:11
   12|   return ~y;  // error, we don't allow coercion here
                 ^

References:
   unary.js:11:16
   11| function x3(y: string) {
                      ^^^^^^ [1]
   unary.js:12:10
   12|   return ~y;  // error, we don't allow coercion here
                ^^ [2]


Error ---------------------------------------------------------------------------------------------------- unary.js:19:2

Cannot cast `-1` to undefined because number [1] is incompatible with undefined [2].

   unary.js:19:2
   19| (-1: void); // error, number ~> void
        ^^ [1]

References:
   unary.js:19:6
   19| (-1: void); // error, number ~> void
            ^^^^ [2]


Error --------------------------------------------------------------------------------------------------- update.js:12:5

Cannot perform arithmetic operation because string [1] is not a number.

   update.js:12:5
   12|     y++; // error, we don't allow coercion here
           ^

References:
   update.js:11:15
   11|   function(y: string) {
                     ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:12:5

Cannot assign number to `y` because number [1] is incompatible with string [2].

   update.js:12:5
   12|     y++; // error, we don't allow coercion here
           ^^^ [1]

References:
   update.js:11:15
   11|   function(y: string) {
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- update.js:14:5

Cannot assign number to `y` because number [1] is incompatible with string [2].

   update.js:14:5
   14|     y++; // error, but you still can't write a number to a string
           ^^^ [1]

References:
   update.js:11:15
   11|   function(y: string) {
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- update.js:18:5

Cannot perform arithmetic operation because string [1] is not a number.

   update.js:18:5
   18|     y--; // error, we don't allow coercion here
           ^

References:
   update.js:17:15
   17|   function(y: string) {
                     ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:18:5

Cannot assign number to `y` because number [1] is incompatible with string [2].

   update.js:18:5
   18|     y--; // error, we don't allow coercion here
           ^^^ [1]

References:
   update.js:17:15
   17|   function(y: string) {
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- update.js:22:5

Cannot assign number to `y` because number [1] is incompatible with string [2].

   update.js:22:5
   22|     ++y; // error, we don't allow coercion here
           ^^^ [1]

References:
   update.js:21:15
   21|   function(y: string) {
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- update.js:22:7

Cannot perform arithmetic operation because string [1] is not a number.

   update.js:22:7
   22|     ++y; // error, we don't allow coercion here
             ^

References:
   update.js:21:15
   21|   function(y: string) {
                     ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:26:5

Cannot assign number to `y` because number [1] is incompatible with string [2].

   update.js:26:5
   26|     --y; // error, we don't allow coercion here
           ^^^ [1]

References:
   update.js:25:15
   25|   function(y: string) {
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- update.js:26:7

Cannot perform arithmetic operation because string [1] is not a number.

   update.js:26:7
   26|     --y; // error, we don't allow coercion here
             ^

References:
   update.js:25:15
   25|   function(y: string) {
                     ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:31:5

Cannot reassign constant `y` [1].

   update.js:31:5
   31|     y++; // error, can't update const
           ^

References:
   update.js:30:11
   30|     const y = 123;
                 ^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:32:5

Cannot reassign constant `y` [1].

   update.js:32:5
   32|     y--; // error, can't update const
           ^

References:
   update.js:30:11
   30|     const y = 123;
                 ^ [1]



Found 38 errors
